# eds-notes

./: .bashnbrc  .buildinfo  .gitignore  .gitmodules  .pdm.toml  .pre-commit-config.yaml  Makefile  README.md  genindex.html  intro.html  notes.md  objects.inv  pwg_presentation_02-08-2023.html  pyproject.toml  search.html  searchindex.js  test_nb.html
_sources/: presentation.ipynb  pwg_presentation_02-08-2023.ipynb  pwg_presentation_02-08-2023.md  test_nb.ipynb
_sources/python_notes/pwg_presentation/: part1.ipynb  part2.ipynb  pwg_presentation_02-08-2023_part1.ipynb  pwg_presentation_02-08-2023_part2.ipynb
docs/: _config.yml  _toc.yml  intro.md  pwg_presentation_02-08-2023.ipynb
docs/_build/.doctrees/: environment.pickle  intro.doctree  presentation.doctree  pwg_presentation_02-08-2023.doctree
docs/_build/html/: .buildinfo  genindex.html  intro.html  objects.inv  pwg_presentation_02-08-2023.html  search.html  searchindex.js
docs/_build/jupyter_execute/: presentation.py  presentation.sh
md_notebooks/: bash_kernel_testing.md  create_pdm_project.md  intro.md  pdm_project.md  presentation.md  pwg_presentation_02-08-2023.md  pwg_presentation_02-08-2023_part1.md  pwg_presentation_02-08-2023_part2.md  static_presentation.md
python_notes/pwg_presentation/: intro.html  part1.html  part2.html  pwg_presentation_02-08-2023.html  pwg_presentation_02-08-2023_part1.html  pwg_presentation_02-08-2023_part2.html
resources/skeleton/: README.md  pyproject.toml
scripts/: diff-so-fancy  gen_logo
src/eds_notes/: cli.py  utils.py
(+3 files in other folders)
