[project]
name = "eds-notes"
version = "0.1.0"
description = "Notes on miscellaneous topics in physics, math, and python."
authors = [
    {name = "Edward Eskew", email = "edward.eskew@wsu.edu"},
]
dependencies = [
    "jupyter>=1.0.0",
    "jupytext>=1.14.4",
    "bash-kernel>=0.9.0",
    "RISE>=5.7.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black[jupyter]>=23.1.0",
    "pre-commit>=3.0.4",
]
docs = [
    "jupyter-book>=0.13.2",
    "cowsay>=5.0",
    "ghp-import>=2.1.0",
]

[tool.jupytext]
formats = "notebooks///ipynb,md_notebooks///md"
